--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,18 @@
 version: 2.1
+jobs:
+  build:
+    docker:
+      - image: circleci/node:jessie-browsers
+    steps:
+      - checkout
+      - run: mkdir test-reports
+      - run:
+          name: Download Selenium
+          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
+      - run:
+          name: Start Selenium
+          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
+          background: true
 workflows:
   version: 2
   just_push:
