--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 version: 2.1
 workflows:
   version: 2
-  pantheon_process:
-    jobs:      
-    - selenium_install:
-    - pantheon/push:
+  just_push:
+      jobs:
       - pantheon/push
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0 
