--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,4 @@ workflows:
               only: "master"
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0 
+  playground: fauxalgore/playground@0.0.2
