--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,43 @@ workflows:
           filters:
             branches:
               only: "master"
+      - deploy_to_live:
+          requires:
+          - approve_test_env
+          filters:
+            branches:
+              only: "master"
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0 
   playground: fauxalgore/playground@0.0.2
+jobs:
+  backup_test_env:
+    docker:
+    - image: quay.io/pantheon-public/build-tools-ci:5.x
+    steps:
+    - run:
+        name: Authenticate with Pantheon's CLI using a machine token
+        command: terminus -n auth:login --machine-token="$TERMINUS_TOKEN"
+    - run: terminus backup:create $TERMINUS_SITE.test
+  deploy_to_test:
+    docker:
+    - image: quay.io/pantheon-public/build-tools-ci:5.x
+    steps:
+    - run:
+        name: Authenticate with Pantheon's CLI using a machine token
+        command: terminus -n auth:login --machine-token="$TERMINUS_TOKEN"
+    - run: echo "I should update the --note field to account for commit messages"
+    - run: terminus env:deploy $TERMINUS_SITE.test --note="automatic deployment from CI"  --sync-content --cc
+    # This cache clear shouldn't be necessary but run it just to be safe.
+    - run: terminus env:clear-cache $TERMINUS_SITE.test
+  deploy_to_live:
+    docker:
+    - image: quay.io/pantheon-public/build-tools-ci:5.x
+    steps:
+    - run:
+        name: Authenticate with Pantheon's CLI using a machine token
+        command: terminus -n auth:login --machine-token="$TERMINUS_TOKEN"
+    - run: echo "I should update the --note field to account for commit messages"
+    - run: terminus env:deploy $TERMINUS_SITE.live --note="automatic deployment from CI"  --sync-content --cc
+    # This cache clear shouldn't be necessary but run it just to be safe.
+    - run: terminus env:clear-cache $TERMINUS_SITE.live    
