--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,5 @@ jobs:
     - run:
         name: Authenticate with Pantheon's CLI using a machine token
         command: terminus -n auth:login --machine-token="$TERMINUS_TOKEN"
-    - run: echo ${CIRCLE_PULL_REQUEST##*/}
+    - run: echo ${CIRCLE_PULL_REQUEST##*/};
+    - run: echo $CI_PULL_REQUEST;
