--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,17 @@ jobs:
     - image: quay.io/pantheon-public/build-tools-ci:5.x
     steps:
     - run:
-        name: CI Pull Request Number
-        command: echo ${CIRCLE_PULL_REQUEST##*/}
+        name: 'Setup env variables'
+        command: |
+          echo 'export MY_PR_NUMBER="$CIRCLE_PR_NUMBER"' >> $BASH_ENV
+          echo 'export MY_PR_NUMBER2=${CIRCLE_PULL_REQUEST##*/}' >> $BASH_ENV
+          echo 'export MY_PR="$CIRCLE_PULL_REQUEST"' >> $BASH_ENV
     - run:
-        name: CI Pull Request Number AGAIN
-        command:  echo $CI_PULL_REQUEST;
+        name: 'What PR am I on?'
+        command: echo $MY_PR
+    - run:
+        name: 'What is my PR number?'
+        command: echo $MY_PR_NUMBER
+    - run:
+        name: 'What is my PR number2?'
+        command: echo $MY_PR_NUMBER2
