--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ version: 2.1
 workflows:
   version: 2
   build_push_test:
-    jobs:
+    jobs:      
+      - backup_test_env
       - pantheon/push
-      - backup_test_env   
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0 
 jobs:
@@ -12,6 +12,12 @@ jobs:
     docker:
     - image: quay.io/pantheon-public/build-tools-ci:5.x
     steps:
+    - run:
+       name: Set PR number
+       command: |
+         echo 'export CIRCLE_PR_NUMBER="${CIRCLE_PR_NUMBER:-${CIRCLE_PULL_REQUEST##*/}}"' >> $BASH_ENV
+         source $BASH_ENV
+         echo $CIRCLE_PR_NUMBER
     - run:
         name: 'Setup env variables'
         command: |
