--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,16 @@ jobs:
     - run:
        name: Set PR number
        command: |
-         echo 'export CIRCLE_PR_NUMBER="${CIRCLE_PR_NUMBER:-${CIRCLE_PULL_REQUEST##*/}}"' >> $BASH_ENV
-         source $BASH_ENV
-         echo $CIRCLE_PR_NUMBER
+         if [ -z "${CI_PULL_REQUEST:-}" ]; then
+            CI_PR_ID=`git log -n 1 | grep 'Merge pull request' | sed -e 's/.*#\([0-9]\+\).*/\1/'`
+            export CI_PULL_REQUEST="https://github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/pulls/${CI_PR_ID}"
+         fi
     - run:
         name: 'Setup env variables'
         command: |
           echo 'export MY_PR_NUMBER="$CIRCLE_PR_NUMBER"' >> $BASH_ENV
           echo 'export MY_PR_NUMBER2=${CIRCLE_PULL_REQUEST##*/}' >> $BASH_ENV
-          echo 'export MY_PR="$CIRCLE_PULL_REQUEST"' >> $BASH_ENV
+          echo 'export MY_PR="$CI_PULL_REQUEST"' >> $BASH_ENV
     - run:
         name: 'What PR am I on?'
         command: echo $MY_PR
